--- a/laokou-base/laokou-log/pom.xml
+++ b/laokou-base/laokou-log/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.laokou</groupId>
     <artifactId>laokou-log</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>${laokou.version}</version>
 
     <dependencies>
         <dependency>
@@ -21,12 +21,12 @@
         <dependency>
             <groupId>eu.bitwalker</groupId>
             <artifactId>UserAgentUtils</artifactId>
-            <version>1.21</version>
+            <version>${UserAgentUtils.version}</version>
         </dependency>
         <dependency>
             <groupId>io.laokou</groupId>
             <artifactId>laokou-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${laokou.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.baomidou</groupId>
