--- a/laokou-cloud/laokou-monitor/pom.xml
+++ b/laokou-cloud/laokou-monitor/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.laokou</groupId>
     <artifactId>laokou-monitor</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>${laokou.version}</version>
     <description>监控服务</description>
     <properties>
         <java.version>1.8</java.version>
