--- a/laokou-service/laokou-redis/pom.xml
+++ b/laokou-service/laokou-redis/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.laokou</groupId>
     <artifactId>laokou-redis</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>${laokou.version}</version>
     <description>redis工具</description>
     <dependencies>
         <dependency>
@@ -24,12 +24,12 @@
         <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
-            <version>3.15.5</version>
+            <version>${redisson.version}</version>
         </dependency>
         <dependency>
             <groupId>io.laokou</groupId>
             <artifactId>laokou-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${laokou.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.baomidou</groupId>
