--- a/laokou-parent/pom.xml
+++ b/laokou-parent/pom.xml
@@ -31,8 +31,6 @@
         <mysql.version>5.1.46</mysql.version>
         <!--cloud版本-->
         <spring-cloud.version>Hoxton.SR6</spring-cloud.version>
-        <!--swagger版本-->
-        <swagger.version>2.8.0</swagger.version>
         <!--admin版本-->
         <spring-boot-admin.version>2.2.2</spring-boot-admin.version>
         <!--flowable版本-->
@@ -89,6 +87,8 @@
         <guava.version>19.0</guava.version>
         <!--jjwt版本-->
         <jjwt.version>0.7.0</jjwt.version>
+        <!--knife4j版本-->
+        <knife4j.version>2.0.9</knife4j.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -118,18 +118,6 @@
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql.version}</version>
-            </dependency>
-            <!-- 定义 swagger 版本 -->
-            <dependency>
-                <groupId>io.springfox</groupId>
-                <artifactId>springfox-swagger2</artifactId>
-                <version>${swagger.version}</version>
-            </dependency>
-            <!-- 定义 swagger 版本 -->
-            <dependency>
-                <groupId>io.springfox</groupId>
-                <artifactId>springfox-swagger-ui</artifactId>
-                <version>${swagger.version}</version>
             </dependency>
             <!-- 定义 flowable 版本 -->
             <dependency>
