--- a/laokou-service/laokou-admin/pom.xml
+++ b/laokou-service/laokou-admin/pom.xml
@@ -11,7 +11,7 @@
 	<artifactId>laokou-admin</artifactId>
 	<version>${laokou.version}</version>
 	<name>laokou-admin</name>
-	<description>admin管理</description>
+	<description>后台管理模块</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
