--- a/laokou-service/laokou-admin/src/main/resources/application.yml
+++ b/laokou-service/laokou-admin/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     name: laokou-admin
   profiles:
     # 环境 dev|test|prod
-    active: test
+    active: dev
   messages:
     encoding: UTF-8
     basename: i18n/messages
