--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -36,39 +36,15 @@ services:
     ports:
       - 1111:1111
     restart: on-failure:10
-  laokou-sso-service:
-    image: sso:1.0
-    container_name: laokou-sso
+  laokou-admin-service:
+    image: admin:1.0
+    container_name: laokou-admin
     environment:
       - TZ="Asia/Shanghai"
     networks:
       - laokou
     ports:
       - 9999:9999
-    restart: on-failure:10
-    depends_on:
-      - laokou-register-service
-  laokou-activiti-service:
-    image: activiti:1.0
-    container_name: laokou-activiti
-    environment:
-      - TZ="Asia/Shanghai"
-    networks:
-      - laokou
-    ports:
-      - 9019:9019
-    restart: on-failure:10
-    depends_on:
-      - laokou-register-service
-  laokou-resource-service:
-    image: resource:1.0
-    container_name: laokou-resource
-    environment:
-      - TZ="Asia/Shanghai"
-    networks:
-      - laokou
-    ports:
-      - 9025:9025
     restart: on-failure:10
     depends_on:
       - laokou-register-service
