--- a/laokou-parent/pom.xml
+++ b/laokou-parent/pom.xml
@@ -2,11 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.5.RELEASE</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.laokou</groupId>
     <artifactId>laokou-parent</artifactId>
@@ -24,6 +19,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <!--boot版本-->
+        <spring-boot.version>2.2.5.RELEASE</spring-boot.version>
         <!--lombok版本-->
         <lombok.version>1.18.10</lombok.version>
         <!--mysql版本-->
@@ -90,9 +87,18 @@
         <knife4j.version>2.0.9</knife4j.version>
         <!--weixin-java-mp版本-->
         <weixin-java-mp.version>4.2.0</weixin-java-mp.version>
+        <!--commons-codec版本-->
+        <commons-codec.version>1.15</commons-codec.version>
     </properties>
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-parent</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>de.codecentric</groupId>
                 <artifactId>spring-boot-admin-dependencies</artifactId>
