--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.2.5.RELEASE</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.laokou</groupId>
     <artifactId>laokou-parent</artifactId>
@@ -9,9 +14,9 @@
     <description>parent配置</description>
     <packaging>pom</packaging>
     <modules>
-        <module>../laokou-base</module>
-        <module>../laokou-cloud</module>
-        <module>../laokou-service</module>
+        <module>laokou-base</module>
+        <module>laokou-cloud</module>
+        <module>laokou-service</module>
     </modules>
     <properties>
         <laokou.version>1.0-SNAPSHOT</laokou.version>
@@ -19,8 +24,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <!--boot版本-->
-        <spring-boot.version>2.2.5.RELEASE</spring-boot.version>
         <!--lombok版本-->
         <lombok.version>1.18.10</lombok.version>
         <!--mysql版本-->
@@ -92,13 +95,6 @@
     </properties>
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-parent</artifactId>
-                <version>${spring-boot.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
             <dependency>
                 <groupId>de.codecentric</groupId>
                 <artifactId>spring-boot-admin-dependencies</artifactId>
