--- a/laokou-cloud/pom.xml
+++ b/laokou-cloud/pom.xml
@@ -6,6 +6,7 @@
         <groupId>io.laokou</groupId>
         <artifactId>laokou-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.laokou</groupId>
