--- a/laokou-base/laokou-common/pom.xml
+++ b/laokou-base/laokou-common/pom.xml
@@ -22,6 +22,11 @@
             <version>${hutool-all.version}</version>
         </dependency>
         <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>${jjwt.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>${mybatis-plus.version}</version>
