--- a/laokou-service/laokou-admin/pom.xml
+++ b/laokou-service/laokou-admin/pom.xml
@@ -39,6 +39,12 @@
 			<groupId>io.laokou</groupId>
 			<artifactId>laokou-dynamic-datasource</artifactId>
 			<version>${laokou.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>io.laokou</groupId>
+					<artifactId>laokou-common</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
@@ -118,11 +124,6 @@
 			<groupId>com.github.ulisesbocchio</groupId>
 			<artifactId>jasypt-spring-boot-starter</artifactId>
 			<version>${jasypt.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.jsonwebtoken</groupId>
-			<artifactId>jjwt</artifactId>
-			<version>${jjwt.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.flowable</groupId>
