--- a/laokou-service/laokou-admin/src/main/resources/application.yml
+++ b/laokou-service/laokou-admin/src/main/resources/application.yml
@@ -22,6 +22,8 @@ spring:
   http:
     encoding:
       charset: UTF-8
+  main:
+    allow-bean-definition-overriding: true
 
 management:
   endpoints:
