--- a/laokou-service/laokou-admin/src/main/resources/application.yml
+++ b/laokou-service/laokou-admin/src/main/resources/application.yml
@@ -24,6 +24,11 @@ spring:
       charset: UTF-8
   main:
     allow-bean-definition-overriding: true
+  cloud:
+    inetutils:
+      ignoredInterfaces:
+        - docker0
+        - veth.*
 
 management:
   endpoints:
