--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -48,6 +48,18 @@ services:
     restart: on-failure:10
     depends_on:
       - laokou-register-service
+  laokou-auth-service:
+    image: auth:1.0
+    container_name: laokou-auth
+    environment:
+      - TZ="Asia/Shanghai"
+    networks:
+      - laokou
+    ports:
+      - 9000:9000
+    restart: on-failure:10
+    depends_on:
+      - laokou-register-service
   laokou-monitor-service:
     image: monitor:1.0
     container_name: laokou-monitor
