--- a/laokou-service/laokou-auth/src/main/resources/application-prod.yml
+++ b/laokou-service/laokou-auth/src/main/resources/application-prod.yml
@@ -27,7 +27,7 @@ spring:
         username: ENC(7j+MYBNM2fhq8WST3DE3WA==)
         password: ENC(nj35dMcOWEmR5EASEZR3yfaT4IdT9TPm)
         instance:
-          service-base-url: http://10.0.8.7:${server.port}
+          service-base-url: http://175.178.69.253/laokou/auth
           prefer-ip: true
   redis:
     database: 0
