--- a/laokou-cloud/laokou-gateway/src/main/resources/application-prod.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/application-prod.yml
@@ -29,7 +29,7 @@ spring:
         username: root
         password: koushenhai
         instance:
-          service-base-url: http://175.178.69.253/laokou
+          service-base-url: http://175.178.69.253:${server.port}
           prefer-ip: true
 
 logging:
