--- a/laokou-base/laokou-security/pom.xml
+++ b/laokou-base/laokou-security/pom.xml
@@ -9,27 +9,27 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.laokou</groupId>
-    <artifactId>laokou-dynamic-datasource</artifactId>
+    <artifactId>laokou-security</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>${mybatis-plus.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid-spring-boot-starter</artifactId>
-            <version>${druid.version}</version>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
         <dependency>
             <groupId>io.laokou</groupId>
-            <artifactId>laokou-security</artifactId>
+            <artifactId>laokou-common</artifactId>
             <version>${laokou.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.baomidou</groupId>
+                    <artifactId>mybatis-plus-boot-starter</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
