--- a/laokou-base/pom.xml
+++ b/laokou-base/pom.xml
@@ -17,6 +17,7 @@
         <module>laokou-common</module>
         <module>laokou-log</module>
         <module>laokou-dynamic-datasource</module>
+        <module>laokou-security</module>
     </modules>
 
 </project>
