--- a/laokou-service/laokou-admin/src/main/resources/application-test.yml
+++ b/laokou-service/laokou-admin/src/main/resources/application-test.yml
@@ -15,6 +15,7 @@ app:
 apollo:
   cacheDir: config # 自定义本地配置文件缓存路径
   bootstrap:
+    namespace: dynamic-tp-apollo-dtp.yml,application,applicaiton.yml
     enabled: true # 设置在应用启动阶段就加载 Apollo 配置
     eagerLoad:
       enabled: true
