--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,11 @@
         <commons-codec.version>1.15</commons-codec.version>
         <!--ynamic-tp-->
         <dynamic-tp.version>1.0.7</dynamic-tp.version>
+        <!--oracle驱动依赖-->
+        <oracle.version>11.2.0.3</oracle.version>
+        <!--freemarker模板引擎依赖-->
+        <freemarker.version>2.3.31</freemarker.version>
+
     </properties>
     <dependencyManagement>
         <dependencies>
